apps/doreme/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doreme
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - doremi.klr.kr
      secretName: doremi-klr-kr-tls
  rules:
    - host: doremi.klr.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: doreme
                port:
                  number: 8080
